INTYGFV-12005: Java 11 & Spring 5